--- a/index.html
+++ b/index.html
@@ -16,56 +16,54 @@
                 <p class="m-0">Student in Healthcare Data Science</p>
             </div>
             <div class="theme-toggle">
-                <span class="icon-light"><i class="fas fa-sun"></i></span>
-                <span class="icon-dark"><i class="fas fa-moon"></i></span>
+                <span class="icon-dark">🌙</span>
+                <span class="icon-light">☀️</span>
             </div>
         </div>
-    </header>
-            <nav>
-                <ul class="nav nav-tabs justify-content-end" id="portfolioTabs" role="tablist">
-                    <li class="nav-item">
-                        <a class="nav-link active" id="Home-tab" data-bs-toggle="tab" href="#Home" role="tab" aria-controls="Home" aria-selected="true">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="about-tab" data-bs-toggle="tab" href="#about" role="tab" aria-controls="about" aria-selected="false">A propos de moi</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="Skills-tab" data-bs-toggle="tab" href="#Skills" role="tab" aria-controls="Skills" aria-selected="false">Compétences</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="Experiences-tab" data-bs-toggle="tab" href="#Experiences" role="tab" aria-controls="Experiences" aria-selected="false">Experiences</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="Formation-tab" data-bs-toggle="tab" href="#Formation" role="tab" aria-controls="Formation" aria-selected="false">Formation</a>    
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="Contact-tab" data-bs-toggle="tab" href="#Contact" role="tab" aria-controls="Contact" aria-selected="false">Contact</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <ul class="nav nav-tabs justify-content-end" id="portfolioTabs" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link active" id="Home-tab" data-bs-toggle="tab" href="#Home" role="tab" aria-controls="Home" aria-selected="true">Home</a>
+                </li>                    
+                <li class="nav-item">
+                   <a class="nav-link" id="about-tab" data-bs-toggle="tab" href="#about" role="tab" aria-controls="about" aria-selected="false">A propos de moi</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="Skills-tab" data-bs-toggle="tab" href="#Skills" role="tab" aria-controls="Skills" aria-selected="false">Compétences</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="Experiences-tab" data-bs-toggle="tab" href="#Experiences" role="tab" aria-controls="Experiences" aria-selected="false">Experiences</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="Formation-tab" data-bs-toggle="tab" href="#Formation" role="tab" aria-controls="Formation" aria-selected="false">Formation</a>    
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="Contact-tab" data-bs-toggle="tab" href="#Contact" role="tab" aria-controls="Contact" aria-selected="false">Contact</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <div class="tab-content container mt-4">
         <!-- Home Section -->
-        <div class="tab-pane fade show active" id="Home" role="tabpanel" aria-labelledby="Home-tab">
+        <div class="tab-pane fade show active section" id="Home" role="tabpanel" aria-labelledby="Home-tab">
             <div class="row align-items-center min-vh-50">
                 <!--Left Section-->
                 <div class="col-md-6 text-left">
-                <h2 class="display-5">Welcome to My Portfolio</h2>
-                <p class="lead">Je m'appelle Ethan Lavogez et je suis étudiant en Data Science en santé.</p>
-                <p>Passionné par la transformation des données de santé en informations exploitables.</p>
-            </div>
+                    <h2 class="display-5">Bienvenu sur mon Portfolio</h2>
+                    <p class="lead">Je m'appelle Ethan Lavogez et je suis étudiant en Data Science en santé.</p>
+                    <p>Passionné par la transformation des données de santé en informations exploitables.</p>
+                </div>
 
-            <!-- Right Section -->
-            <div class="col-md-6 text-center">
-                <img src="assets/image_mario.png" alt="Ethan Lavogez" class="profile-img">
+                <!-- Right Section -->
+                <div class="col-md-6 text-center">
+                    <img src="assets/image_mario.png" alt="Ethan Lavogez" class="profile-img">
+                </div>
             </div>
         </div>
-    </div>
 
         <!-- About Section -->
-        <div class="tab-pane fade" id="about" role="tabpanel" aria-labelledby="about-tab">
+        <div class="tab-pane fade section" id="about" role="tabpanel" aria-labelledby="about-tab">
             <div class="about-header">
                 <h2 class="about-title">About<br>Me</h2>
             </div>
@@ -73,7 +71,7 @@
         </div>
 
         <!-- Compétences Section -->
-        <div class="tab-pane fade" id="Skills" role="tabpanel" aria-labelledby="Skills-tab">
+        <div class="tab-pane fade section" id="Skills" role="tabpanel" aria-labelledby="Skills-tab">
             <div class="Skills-container">
                 <h1 class="Skills-title">Skills</h1>
                 <div class="Skills-bubbles">
@@ -86,7 +84,7 @@
         </div>
             
         <!-- Experiences Section -->
-        <div class="tab-pane fade" id="Experiences" role="tabpanel" aria-labelledby="Experiences-tab">
+        <div class="tab-pane fade section" id="Experiences" role="tabpanel" aria-labelledby="Experiences-tab">
             <div class="experience-section">
                 <h1 class="experience-title">Expériences</h1>
                 <div class="timeline">
@@ -167,7 +165,7 @@
         </div>
 
          <!--Formation Section-->
-         <div class="tab-pane fade" id="Formation" role="tabpanel" aria-labelledby="Formation-tab">
+         <div class="tab-pane fade section" id="Formation" role="tabpanel" aria-labelledby="Formation-tab">
             <div class="formation-title">
                 <h1>Formation</h1>
             </div>
@@ -198,7 +196,7 @@
         </div>        
 
         <!-- Contact Section -->
-        <div class="tab-pane fade" id="Contact" role="tabpanel" aria-labelledby="Contact-tab">
+        <div class="tab-pane fade section" id="Contact" role="tabpanel" aria-labelledby="Contact-tab">
             <div class="contact-title">
                 <h1>Contactez-moi</h1>
             </div>
