--- a/index.html
+++ b/index.html
@@ -42,17 +42,19 @@
     <div class="tab-content container mt-4">
         <!-- Home Section -->
         <div class="tab-pane fade show active" id="Home" role="tabpanel" aria-labelledby="Home-tab">
-            <div class="row align-items-center min-vh-50">
+            <section class="home bg-primary text-light d-flex align-items-center" style="min-height: 100vh;">
+                <div class="container">
+                    <div class="row align-items-center">
                 <!--Left Section-->
-                <div class="col-md-6 text-left">
-                <h2 class="display-5">Welcome to My Portfolio</h2>
-                <p class="lead">Je m'appelle Ethan Lavogez et je suis étudiant en Data Science en santé.</p>
-                <p>Passionné par la transformation des données de santé en informations exploitables.</p>
+                <div class="col-md-6 text-left text-lg-start">
+                <h2 class="display-4 fw-bold fade-in">Bienvenue sur mon Portfolio</h2>
+                <p class="lead fade-in" style="animation-delay: 0.5s;">Je m'appelle Ethan Lavogez, je suis étudiant en Data Science en santé et je vous invite à explorez mon parcours <span class="text-warning"></span>.</p>
+                <a href="#about" class="btn btn-warning btn-lg mt-3 fade-in" style="animation-delay: 1s;">En savoir plus</a>
             </div>
 
             <!-- Right Section -->
-            <div class="col-md-6 text-center">
-                <img src="assets/image_mario.png" alt="Ethan Lavogez" class="profile-img">
+            <div class="col-lg-6 text-center">
+                <img src="assets/image_mario.png" alt="Ethan Lavogez" class="img-fluid rounded-circle shadow-lg">
             </div>
         </div>
     </div>
