--- a/index.html
+++ b/index.html
@@ -45,27 +45,16 @@
             <div class="row align-items-center min-vh-50">
                 <!--Left Section-->
                 <div class="col-md-6 text-left">
-                    <h2 class="display-5">Welcome to My Portfolio</h2>
-                    <p class="lead">Je m'appelle Ethan Lavogez et je suis étudiant en Data Science en santé.</p>
-                    <p>Transformez les données en solutions pour un avenir meilleur.</p>
-                    <a href="#about" class="btn btn-primary btn-lg mt-3">Explorez</a>                
-                </div>
+                <h2 class="display-5">Welcome to My Portfolio</h2>
+                <p class="lead">Je m'appelle Ethan Lavogez et je suis étudiant en Data Science en santé.</p>
+                <p>Passionné par la transformation des données de santé en informations exploitables.</p>
+            </div>
 
-                <!-- Right Section -->
-                <div class="col-md-6 text-center">
-                    <img src="assets/image_mario.png" alt="Ethan Lavogez" class="profile-img">
-                </div>
+            <!-- Right Section -->
+            <div class="col-md-6 text-center">
+                <img src="assets/image_mario.png" alt="Ethan Lavogez" class="profile-img">
             </div>
         </div>
-
-        <!-- About Section -->
-        <div class="tab-pane fade" id="about" role="tabpanel" aria-labelledby="about-tab">
-            <div class="about-header">
-                <h2 class="about-title">About<br>Me</h2>
-            </div>
-            <p>Je suis Ethan Lavogez, un étudiant passionné par la science des données...</p>
-        </div>
-
     </div>
 
         <!-- About Section -->
@@ -239,4 +228,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
