--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
                 <h2 class="display-5">Welcome to My Portfolio</h2>
                 <p class="lead">Je m'appelle Ethan Lavogez et je suis étudiant en Data Science en santé.</p>
                 <p>Passionné par la transformation des données de santé en informations exploitables.</p>
+                <a href="#Contact" class="btn btn-primary mt-3">Contactez-moi</a>
             </div>
 
             <!-- Right Section -->
             <div class="col-md-6 text-center">
-                <img src="assets/image_mario.png" alt="Ethan Lavogez" class="profile-img">
+                <img src="assets/image_mario.png" alt="Ethan Lavogez" class="profile-img rounded-circle" style="width: 250px; height: 250px;">
             </div>
         </div>
     </div>
