--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="tab-content container mt-4">
         <!-- Home Section -->
         <div class="tab-pane fade show active" id="Home" role="tabpanel" aria-labelledby="Home-tab">
-            <div class="row align-items-center min-vh-50">
+            <div class="row align-items-center min-vh-100">
                 <!--Left Section-->
                 <div class="col-md-6 text-left">
                 <h2 class="display-5">Welcome to My Portfolio</h2>
@@ -53,7 +53,7 @@
 
             <!-- Right Section -->
             <div class="col-md-6 text-center">
-                <img src="assets/image_mario.png" alt="Ethan Lavogez" class="profile-img rounded-circle" style="width: 250px; height: 250px;">
+                <img src="assets/image_mario.png" alt="Ethan Lavogez" class="profile-img" style="width: 100%; max-width: 400px; height: auto;">
             </div>
         </div>
     </div>
