--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h2 class="display-5">Welcome to My Portfolio</h2>
                 <p class="lead">Je m'appelle Ethan Lavogez et je suis étudiant en Data Science en santé.</p>
                 <p>Passionné par la transformation des données de santé en informations exploitables.</p>
-                <a href="#Contact" class="btn btn-primary mt-3">Contactez-moi</a>
+                <a href="#about" class="btn btn-primary mt-3">Explorez-moi</a>
             </div>
 
             <!-- Right Section -->
