--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
         <!-- About Section -->
         <div class="tab-pane fade" id="about" role="tabpanel" aria-labelledby="about-tab">
-            <div class="about-header">
-                <h2 class="about-title">About<br>Me</h2>
+            <div class="container mt-4">
+                <h2 class="display-5">About<br>Me</h2>
             </div>
             <p>Je suis Ethan Lavogez, un étudiant passionné par la science des données...</p>
         </div>
