--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <!-- About Section -->
         <div class="tab-pane fade" id="about" role="tabpanel" aria-labelledby="about-tab">
             <div class="container mt-4">
-                <h2 class="display-5">About<br>Me</h2>
+                <h2 class="about-title">About<br>Me</h2>
             </div>
             <p>Je suis Ethan Lavogez, un étudiant passionné par la science des données...</p>
         </div>
