--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h2 class="display-5">Welcome to My Portfolio</h2>
                 <p class="lead">Je m'appelle Ethan Lavogez et je suis étudiant en Data Science en santé.</p>
                 <p>Passionné par la transformation des données de santé en informations exploitables.</p>
-                <a href="#about" class="btn btn-primary mt-3">Explorez-moi</a>
+                <a href="#about" class="btn btn-primary mt-3" data-bs-toggle="tab">Explorez-moi</a>
             </div>
 
             <!-- Right Section -->
@@ -59,7 +59,7 @@
     </div>
 
         <!-- About Section -->
-        <div class="tab-pane fade" id="about" role="tabpanel" aria-labelledby="about-tab">
+        <div class="tab-pane" id="about" role="tabpanel" aria-labelledby="about-tab">
             <div class="container mt-4">
                 <h2 class="about-title">About<br>Me</h2>
             </div>
