--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container d-flex justify-content-between align-items-center">
             <div>
                 <h1 class="m-0">Ethan Lavogez</h1>
-                <p class="m-0">Student in Healthcare Data Science</p>
+                <h2 class="m-0">Student in Healthcare Data Science</h2>
             </div>
             <nav>
                 <ul class="nav nav-tabs justify-content-end" id="portfolioTabs" role="tablist">
@@ -45,9 +45,9 @@
             <div class="row align-items-center min-vh-100">
                 <!--Left Section-->
                 <div class="col-md-6 text-left">
-                <h2 class="display-5">Welcome to My Portfolio</h2>
-                <p class="lead">Je m'appelle Ethan Lavogez et je suis étudiant en Data Science en santé.</p>
-                <p>Passionné par la transformation des données de santé en informations exploitables.</p>
+                <h1 class="display-5">Welcome to My Portfolio</h1>
+                <h2 class="lead">Je m'appelle Ethan Lavogez et je suis étudiant en Data Science en santé.</h2>
+                <h3>Transformez les données en solutions pour un avenir meilleur.</h3>
                 <a href="#about" class="btn btn-primary mt-3" data-bs-toggle="tab">Explorez-moi</a>
             </div>
 
@@ -61,7 +61,7 @@
         <!-- About Section -->
         <div class="tab-pane" id="about" role="tabpanel" aria-labelledby="about-tab">
             <div class="container mt-4">
-                <h2 class="about-title">About<br>Me</h2>
+                <h1 class="about-title">About<br>Me</h1>
             </div>
             <p>Je suis Ethan Lavogez, un étudiant passionné par la science des données...</p>
         </div>
