--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <div class="row align-items-center min-vh-100">
                 <!--Left Section-->
                 <div class="col-md-6 text-left">
-                <h1 class="display-5">Welcome to My Portfolio</h1>
-                <h2 class="lead">Je m'appelle Ethan Lavogez et je suis étudiant en Data Science en santé.</h2>
-                <h3>Transformez les données en solutions pour un avenir meilleur.</h3>
+                <h1 class="display-5"><strong><em>Welcome to My Portfolio !</em></strong></h1>
+                <p>Dans ce portfolio, vous découvrirez mes compétences, mes projets et ma vision de l'utilisation des données pour améliorer les résultats en santé. J'espère que vous trouverez ces informations utiles et inspirantes.</p>
+                <p>Merci de votre visite et n'hésitez pas à me contacter si vous avez des questions ou des opportunités de collaboration !</p>
                 <a href="#about" class="btn btn-primary mt-3" data-bs-toggle="tab">Explorez-moi</a>
             </div>
 
