--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
             <!-- Right Section -->
             <div class="col-md-6 text-center">
                 <img src="assets/image_photo.png" alt="Ethan Lavogez" class="profile-img" style="width: 100%; max-width: 400px; height: auto;">
-                <br>
-                <p><em>Transformez les données en solutions pour un avenir meilleur.</em></p>
+                <p class="quote"><em>Transformez les données en solutions pour un avenir meilleur.</em></p>
             </div>
         </div>
     </div>
