--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <!-- Right Section -->
             <div class="col-md-6 text-center">
-                <img src="assets/image_photo.png" alt="Ethan Lavogez" class="profile-img" style="width: 100%; max-width: 400px; height: auto;">
+                <img src="assets/image_photo.png" alt="Ethan Lavogez" class="profile-img" style="margin-top: 0;">
                 <p class="quote"><em>Transformez les données en solutions pour un avenir meilleur.</em></p>
             </div>
         </div>
