--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="tab-content container mt-4">
         <!-- Home Section -->
         <div class="tab-pane fade show active" id="Home" role="tabpanel" aria-labelledby="Home-tab">
-            <div class="row align-items-center min-vh-100" id="main-section">
+            <div class="row align-items-center min-vh-100">
                 <!--Left Section-->
                 <div class="col-md-6 text-left">
                 <h1 class="display-5"><strong><em>Welcome to My Portfolio !</em></strong></h1>
