--- a/index.html
+++ b/index.html
@@ -63,8 +63,34 @@
         <div class="tab-pane" id="about" role="tabpanel" aria-labelledby="about-tab">
             <div class="container mt-4">
                 <h1 class="about-title">About<br>Me</h1>
+                <!--Intro personnelle-->
+                <p class="about-intro">
+                Bonjour, je suis <strong>Ethan Lavogez</strong>, un étudiant en Master Data Science en Santé. 
+                Depuis mon plus jeune âge, j’ai toujours été fasciné par la manière dont les données peuvent raconter une histoire 
+                et transformer des idées en solutions concrètes. Aujourd’hui, je me concentre sur l’impact que la science des données 
+                peut avoir dans le domaine de la santé, en contribuant à améliorer les soins et la qualité de vie des patients.
+                </p>
+
+                <!-- Passion pour le sport -->
+                <p class="about-sport">
+                En dehors de mes études, je suis un grand passionné de sport, et plus particulièrement de football. 
+                Ce sport m’a appris l’importance du travail d’équipe, de la résilience et de la stratégie, des qualités 
+                que je retrouve également dans mon travail en Data Science. Mon rêve serait de combiner ces deux passions 
+                en appliquant mes compétences de data scientist au milieu d'un club de football professionnel.
+                </p>
+
+                <!-- Objectifs futurs -->
+                <p class="about-vision">
+                Mon objectif est de trouver des opportunités qui me permettent de mettre mes compétences à profit dans les domaines 
+                qui me passionnent : la santé et/ou le sport. Je crois fermement que l’analyse des données peut révolutionner la prise 
+                de décision dans ces secteurs, qu’il s’agisse d’améliorer les performances sportives ou de personnaliser les soins aux patients.
+                </p>
+
+                <!-- Photo ou image inspirante -->
+                <div class="about-image">
+                    <img src="assets/image_data_sante.png" alt="Data science" class="img-fluid">
+                </div>
             </div>
-            <p>Je suis Ethan Lavogez, un étudiant passionné par la science des données...</p>
         </div>
 
         <!-- Compétences Section -->
