--- a/index.html
+++ b/index.html
@@ -101,11 +101,20 @@
         <div class="tab-pane fade" id="Skills" role="tabpanel" aria-labelledby="Skills-tab">
             <div class="Skills-container">
                 <h1 class="Skills-title">Skills</h1>
-                <div class="Skills-bubbles">
-                    <span class="bubble">Programming: Python, R, SQL</span>
-                    <span class="bubble">Data Analysis: Cleaning, Visualization, Modeling</span>
-                    <span class="bubble">Tools: Git, Power BI, Tableau</span>
-                    <span class="bubble">Project Management: Agile, Collaborative Work</span>
+      
+                    <div class="Skills-bubbles">
+                        <span class="bubble">Langages de programmation: Python, R</span>
+                        <span class="bubble">Manipulation et analyse des données: SQL, pandas, numpy, dplyr</span>
+                        <span class="bubble">Visualisation de données: ggplot2, matplotlib, graphics, shiny, R markdown</span>
+                        <span class="bubble">Développement Web: html, css</span>
+                        <span class="bubble">Solides bases scientifiques, mathématiques et statistiques</span>
+                        <span class="bubble">Esprit d'équipe</span>
+                        <span class="bubble">Capacité d'adaptation</span>
+                        <span class="bubble">Sens de l'organisation</span>
+                        <span class="bubble">Autonomie</span>
+                        <span class="bubble">Gestion de projets</span>
+                        <span class="bubble">Polyvalence</span>
+                    </div>
                 </div>
             </div>
         </div>
