--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </header>
 
-    <div class="tab-content container mt-4">
+    <div class="tab-content container-fluid d-flex flex-column">
         <!-- Home Section -->
         <div class="tab-pane fade show active" id="Home" role="tabpanel" aria-labelledby="Home-tab">
             <div class="row align-items-center min-vh-100">
