--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
 
         <!-- Compétences Section -->
-        <div class="tab-pane fade" id="Skills" role="tabpanel" aria-labelledby="Skills-tab">
+        <div class="tab-pane fade Skills-section" id="Skills" role="tabpanel" aria-labelledby="Skills-tab">
             <div class="Skills-container">
                 <h1 class="Skills-title">Skills</h1>
                 <div class="Skills-grid">
