--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         </div>
 
          <!--Formation Section-->
-         <div class="tab-pane fade" id="Formation" role="tabpanel" aria-labelledby="Formation-tab">
+         <div class="tab-pane fade Formation-section" id="Formation" role="tabpanel" aria-labelledby="Formation-tab">
             <div class="formation-title">
                 <h1>Formation</h1>
             </div>
@@ -232,7 +232,7 @@
         </div>        
 
         <!-- Contact Section -->
-        <div class="tab-pane fade" id="Contact" role="tabpanel" aria-labelledby="Contact-tab">
+        <div class="tab-pane fade Contact-section" id="Contact" role="tabpanel" aria-labelledby="Contact-tab">
             <div class="contact-title">
                 <h1>Contactez-moi</h1>
             </div>
