--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div class="tab-content container-fluid d-flex flex-column">
         <!-- Home Section -->
-        <div class="tab-pane fade show active" id="Home" role="tabpanel" aria-labelledby="Home-tab">
+        <div class="tab-pane fade show active Home-section" id="Home" role="tabpanel" aria-labelledby="Home-tab">
             <div class="row align-items-center min-vh-100">
                 <!--Left Section-->
                 <div class="col-md-6 text-left">
@@ -60,7 +60,7 @@
     </div>
 
         <!-- About Section -->
-        <div class="tab-pane" id="about" role="tabpanel" aria-labelledby="about-tab">
+        <div class="tab-pane fade AboutMe-section" id="about" role="tabpanel" aria-labelledby="about-tab">
             <div class="about container row align-items-center">
                 <!--Texte à gauche-->
                 <div class="col-md-6 about text">
