--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
 
         <!-- About Section -->
-        <div class="tab-pane fade AboutMe-section" id="about" role="tabpanel" aria-labelledby="about-tab">
+        <div class="tab-pane fade about-section" id="about" role="tabpanel" aria-labelledby="about-tab">
             <div class="about container row align-items-center">
                 <!--Texte à gauche-->
                 <div class="col-md-6 about text">
