--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="row align-items-center min-vh-100">
                 <!--Left Section-->
                 <div class="col-md-6 text-left">
-                <h1 class="display-5"><strong><em>Welcome to My Portfolio !</em></strong></h1>
+                <h1 class="Home-title"><strong><em>Welcome to My Portfolio !</em></strong></h1>
                 <p>Dans ce portfolio, vous découvrirez mes compétences, mes projets et ma vision de l'utilisation des données pour améliorer les résultats en santé. J'espère que vous trouverez ces informations utiles et inspirantes.</p>
                 <p>Merci de votre visite et n'hésitez pas à me contacter si vous avez des questions ou des opportunités de collaboration !</p>
                 <a href="#about" class="btn btn-primary mt-3" data-bs-toggle="tab">Explorez-moi</a>
