--- a/index.html
+++ b/index.html
@@ -129,17 +129,30 @@
                         <div class="circle">1</div>
                         <div class="timeline-content">
                             <img src="assets/AAE_Aix.jpeg" alt="Club Logo" class="experience-logo">
-                            <h3>Service Civique - Club de Football Amateur</h3>
-                            <p><strong>Lieu :</strong> Club de Football XYZ</p>
+                            <h3>Service Civique - Club de Football AAE-Aix-Noulette</h3>
+                            <p><strong>Lieu :</strong> Aix-Noulette, France</p>
                             <p><strong>Durée :</strong> Octobre 2020 - Juin 2021</p>
                             <p><strong>Missions :</strong></p>
                             <ul>
-                                <li>Gestion des événements sportifs.</li>
-                                <li>Encadrement des jeunes joueurs.</li>
-                                <li>Support logistique.</li>
+                                <li>Organisation d’événements sportifs (tournois, plateaux, matchs amicaux).</li>
+                                <li>Encadrement et animation des jeunes catégories.</li>
+                                <li>Coach d'une équipe de catégorie u16.</li>
+                                <li>Assurer le respect, la sécurité et le bon déroulement entre les adversaires.</li>
                             </ul>
-                            <p><strong>Objectif :</strong> Développer des compétences en organisation sportive.</p>
-                            <p><strong>Ce que j'ai appris :</strong> Leadership, gestion de projet.</p>
+                            <p><strong>Objectif :</strong> Développer des compétences en organisation sportive et favoriser le développement des jeunes joueurs tout en renforçant la dynamique locale autour du club..</p>
+                            <p><strong>Compétences développées :</strong></p>
+                            <ul>
+                                <li>Leadership et capacité à diriger des groupes.</li>
+                                <li>Organisation et gestion du temps dans un contexte sportif.</li>
+                                <li>Communication efficace avec les jeunes, les entraîneurs, et les partenaires.</li>
+                                <li>Résolution de problèmes logistiques en situation réelle.</li>
+                            </ul>
+                            <p><strong>Ce que j’ai appris :</strong></p>
+                            <p>
+                                Cette expérience m’a permis de développer un sens aigu de l’organisation, de renforcer mon esprit d’équipe, 
+                                et d’apprendre à travailler avec des publics variés. J’ai également découvert l’impact du sport comme outil éducatif 
+                                et social, ce qui a renforcé ma passion pour le football et mon envie de contribuer au domaine sportif.
+                            </p>
                         </div>
                     </div>
         
