--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             <img src="assets/AAE_Aix.jpeg" alt="Club Logo" class="experience-logo">
                             <h3>Service Civique - Club de Football AAE-Aix-Noulette</h3>
                             <p><strong>Lieu :</strong> Aix-Noulette, France</p>
-                            <p><strong>Durée :</strong> Octobre 2020 - Juin 2021</p>
+                            <p><strong>Durée :</strong> Octobre 2022 - Juillet 2023</p>
                             <p><strong>Missions :</strong></p>
                             <ul>
                                 <li>Organisation d’événements sportifs (tournois, plateaux, matchs amicaux).</li>
@@ -139,7 +139,7 @@
                                 <li>Coach d'une équipe de catégorie u16.</li>
                                 <li>Assurer le respect, la sécurité et le bon déroulement entre les adversaires.</li>
                             </ul>
-                            <p><strong>Objectif :</strong> Développer des compétences en organisation sportive et favoriser le développement des jeunes joueurs tout en renforçant la dynamique locale autour du club..</p>
+                            <p><strong>Objectif :</strong> Développer des compétences en organisation sportive et favoriser le développement des jeunes joueurs tout en renforçant la dynamique locale autour du club.</p>
                             <p><strong>Compétences développées :</strong></p>
                             <ul>
                                 <li>Leadership et capacité à diriger des groupes.</li>
@@ -149,7 +149,7 @@
                             </ul>
                             <p><strong>Ce que j’ai appris :</strong></p>
                             <p>
-                                Cette expérience m’a permis de développer un sens aigu de l’organisation, de renforcer mon esprit d’équipe, 
+                                Cette expérience m’a permis de développer mon sens de l’organisation, de renforcer mon esprit d’équipe, 
                                 et d’apprendre à travailler avec des publics variés. J’ai également découvert l’impact du sport comme outil éducatif 
                                 et social, ce qui a renforcé ma passion pour le football et mon envie de contribuer au domaine sportif.
                             </p>
