--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 <!-- Carte Email -->
                 <div class="contact-card">
                     <a href="mailto:ethan.lavogez.etu@univ-lille.fr" target="_blank">
-                        <img src="assets/mail.avif" alt="Email Icon" class="contact-icon">
+                        <img src="assets/mail.png" alt="Email Icon" class="contact-icon">
                         <p>Envoyez-moi un email</p>
                     </a>
                 </div>
