--- a/index.html
+++ b/index.html
@@ -161,16 +161,30 @@
                         <div class="circle">2</div>
                         <div class="timeline-content">
                             <img src="assets/Prysmian_Logo.png" alt="Draka Logo" class="experience-logo">
-                            <h3>Agent de Production - Draka</h3>
-                            <p><strong>Lieu :</strong> Draka XYZ, Usine ABC</p>
-                            <p><strong>Durée :</strong> Juin 2021 - Août 2021</p>
+                            <h3>Agent de Production - Draka Comteg France</h3>
+                            <p><strong>Type d'emploi :</strong> Interim</p>
+                            <p><strong>Lieu :</strong> Billy-Berclau, France</p>
+                            <p><strong>Durée :</strong> Avril 2023 - Août 2023</p>
                             <p><strong>Missions :</strong></p>
                             <ul>
-                                <li>Assemblage et contrôle qualité.</li>
-                                <li>Maintenance des machines de production.</li>
+                                <li>Entretien et maintenance de premier niveau des machines de l’usine</li>
+                                <li>Préparation de commandes, contrôle de la marchandise, conditionnement et étiquetage,palettisation</li>
+                                <li>Suivi de la production avec autocontrôles.</li>
+                                <li>Collaboration avec les équipes techniques pour résoudre les anomalies détectées.</li>
                             </ul>
-                            <p><strong>Objectif :</strong> Appliquer des principes d'optimisation en production.</p>
-                            <p><strong>Ce que j'ai appris :</strong> Discipline, travail d'équipe.</p>
+                            <p><strong>Objectif :</strong> Assurer un haut niveau de qualité et de fiabilité dans la production de câbles optiques pour répondre aux exigences de l'entreprise.</p>
+                            <p><strong>Compétences développées :</strong></p>
+                            <ul>
+                                <li>Rigueur et respect des processus de production.</li>
+                                <li>Capacité à respecter la quantité et la qualité de production dans les délais de fabrication.</li>
+                                <li>Précision dans les tâches techniques et les contrôles qualité.</li>
+                                <li>Esprit d’équipe pour résoudre rapidement les problèmes de production.</li>
+                            </ul>
+                            <p><strong>Ce que j'ai appris :</strong></p> 
+                            <p> 
+                                Cette expérience m’a permis de découvrir les exigences d’un environnement industriel, d’appliquer des compétences techniques 
+                                et de comprendre l’importance de la coordination entre les différents acteurs de la production.
+                            </p>
                         </div>
                     </div>
         
