--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <div class="circle">2</div>
                         <div class="timeline-content">
                             <img src="assets/Prysmian_Logo.png" alt="Draka Logo" class="experience-logo">
-                            <h3>Agent de Production - Draka Comteg France</h3>
+                            <h3>Agent de Production - Draka Comteq France</h3>
                             <p><strong>Type d'emploi :</strong> Interim</p>
                             <p><strong>Lieu :</strong> Billy-Berclau, France</p>
                             <p><strong>Durée :</strong> Avril 2023 - Août 2023</p>
@@ -193,16 +193,25 @@
                         <div class="circle">3</div>
                         <div class="timeline-content">
                             <img src="assets/Saint_Phi.png" alt="Saint Phi Logo" class="experience-logo">
-                            <h3>Ingénieur biomédical - Saint Phi</h3>
-                            <p><strong>Lieu :</strong> Saint Phi, Laboratoire de Recherche</p>
-                            <p><strong>Durée :</strong> Septembre 2021 - Décembre</p>
+                            <h3>Ingénieur biomédical - Hôpital Saint Philibert</h3>
+                            <p><strong>Type d'emploi :</strong> Stage</p>
+                            <p><strong>Lieu :</strong> Lomme, France</p>
+                            <p><strong>Durée :</strong> Octobre 2023 - Décembre 2023</p>
                             <p><strong>Missions :</strong></p>
                             <ul>
-                                <li>Conception et développement de prototypes biomédicaux.</li>
-                                <li>Conception et développement de prototypes biomédicaux.</li>
+                                <li>Inventaire des appareils biomédicaux selon les différents services hospitaliers</li>
+                                <li>Classement (classe 1, 2a, 2b et 3) des dispositif médicaux selon la GMAO</li>
+                                <li>Contacter les entreprises conceptrices pour les obligations de maintenance</li>
+                                <li>Analyses de données avec interprétation à partir de celles-ci</li>
                             </ul>
-                            <p><strong>Objectif :</strong> Appliquer des principes d'innovation.</p>
-                            <p><strong>Ce que j'ai appris :</strong> Conception, développement.</p>
+                            <p><strong>Objectif :</strong> Garantir la sécurité des patients et la fiabilité des dispositifs médicaux en répondant aux exigences des normes hospitalières.</p>
+                            <p><strong>Compétences développées :</strong></p>
+                            <ul>
+                                <li>Communication efficace avec des équipes pluridisciplinaires (techniciens, ingénieurs, commerciaux).</li>
+                                <li>Développement de mes connaissances en normes de sécurité et de qualité en milieu hospitalier.</li>
+                                <li>Développement de mes connaissances des différents équipements biomédicaux et leurs utilisations au sein d'un hôpital</li>
+                            </ul>
+                            <p><strong>Ce que j'ai appris :</strong> Cette expérience m’a permis de mettre en pratique mes compétences tout en développant de nouvelles aptitudes techniques et relationnelles essentielles dans le domaine biomédical et hospitalier.</p>
                         </div>
                      </div>
 
