--- a/index.html
+++ b/index.html
@@ -220,16 +220,26 @@
                         <div class="circle">4</div>
                         <div class="timeline-content">
                             <img src="assets/cerim.png" alt="cerim logo" class="experience-logo">
-                            <h3>Data Scientist - Cerim</h3>
-                            <p><strong>Lieu :</strong> Cerim, Laboratoire de Recherche</p>
-                            <p><strong>Durée :</strong> Janvier 2022 - Mars 202</p>
+                            <h3>Data Scientist - CERIM</h3>
+                            <p><strong>Type d'emploi :</strong> Stage</p>
+                            <p><strong>Lieu :</strong> Centre d'Etudes et de Recherche en Informatique Médicale (CERIM), Lille, France</p>
+                            <p><strong>Durée :</strong> Avril 2024 - Juin 2024</p>
                             <p><strong>Missions :</strong></p>
                             <ul>
-                                <li>Conception et développement de prototypes biomédicaux.</li>
-                                <li>Conception et développement de prototypes biomédicaux.</li>
+                                <li>Participer au projet en cours - HELISMUR</li>
+                                <li>Nettoyage des bases de données</li>
+                                <li>Analyser des bases de données</li>
+                                <li>Créer des visualisations à partir du langage de programmation Jupyter Notebook</li>
                             </ul>
-                            <p><strong>Objectif :</strong> Appliquer des principes d'innovation.</p>
-                            <p><strong>Ce que j'ai appris :</strong> Conception, développement.</p>
+                            <p><strong>Objectif :</strong> Créer des visualisations claires et informatives des données des hélicoptères du SMUR afin de faciliter leur analyse et de soutenir la prise de décision.</p>
+                            <p><strong>Compétences développées :</strong></p>
+                            <ul>
+                                <li>Programmation et visualisation de données à l'aide de Jupyter Notebook et des bibliothèques telles que Matplotlib et Plotly.</li>
+                                <li>Data management et gestion de bases de données géographiques.</li>
+                                <li>Auto-formation et résolution de problèmes.</li>
+                                <li>Communication et collaboration</li>
+                            </ul>
+                            <p><strong>Ce que j'ai appris :</strong> Cette expérience m'a permis de contribuer à l'amélioration du projet HéliSMUR et d'acquérir un ensemble de compétences qui me sont précieuses pour la réussite de mes études ainsi que pour ma carrière future dans le domaine de la data science et des services de santé.</p>
                         </div>
                      </div>
                 </div>
