--- a/index.html
+++ b/index.html
@@ -255,16 +255,34 @@
                 <!--Carte 1-->
                 <div class="formation-card">
                     <img src="assets/lycee.jpg" alt="lycee" class="formation-logo">
-                    <h3>Baccalauréat Scientifique - option Mathématiques</h3>
-                    <p>Lycée Léo Lagrange (2017 - 2021)</p>
+                    <h3>Baccalauréat Scientifique - Option Mathématiques</h3>
+                    <p><strong>Lieu :</strong> Lycée Léo-Lagrange, Bully-les-mines</p>
+                    <p><strong>Années :</strong> Septembre 2017 - Juillet 2021</p>
                     <p><strong>Compétences :</strong></p>
+                    <ul>
+                        <li>Mathématiques</li>
+                        <li>Physique-Chimie</li>
+                        <li>Siences de la vie et de la terre</li>
+                    </ul>
                 </div>
                 <!-- Carte 2 -->
                 <div class="formation-card">
                     <img src="assets/univ.png" alt="Université Logo" class="formation-logo">
-                    <h3>Licence en Sciences pour la Santé</h3>
-                    <p>Université de Lille - ILIS (2021 - 2024)</p>
-                    <p>Description succincte de ce que vous avez appris ou réalisé.</p>
+                    <h3>Licence en Sciences pour la Santé - Option Ingénierie Biomédicale</h3>
+                    <p><strong>Lieu :</strong> Université de Lille, France
+                    <p><strong>Années :</strong> Septembre 2021 - Juin 2024</p>
+                    <p><strong>Description de la formation :</strong></p>
+                    <ul>
+                        <li>Formation interdisciplinaire couvrant les sciences fondamentales relatives à la santé, les sciences humaines et sociales, l'environnement et la qualité.</li>
+                        <li>Acquisition des techniques de communication (expression orale, expression écrite, maîtrise de deux langues vivantes étrangères, outil informatique) et enfin de réalisation de projets et de travaux de groupes.</li>
+                        <li>Acquisition de connaissances fondamentales en biologie, physiologie, et ingénierie biomédicale.</li> 
+                    </ul>
+                    <p><strong>Compétences acquises :</strong></p>
+                    <ul>
+                        <li>Elaborer et mettre en oeuvre une méthodologie de travail et une démarche qualité dans le domaine de la santé et/ou du médico-social et/ou de l’environnement et/ou de l’agro-alimentaire.</li>
+                        <li>Mobiliser des savoirs disciplinaires spécialisés en santé et/ou environnement et/ou médico- social et/ou agro-alimentaire</li>
+                        <li>Maîtrise de la communication orale/écrite.</li>
+                    </ul>
                 </div>
                 <!-- Carte 3 -->
                 <div class="formation-card">
