--- a/index.html
+++ b/index.html
@@ -252,21 +252,24 @@
                 <h1>Formation</h1>
             </div>
             <div class="formation-timeline">
-                <!--Carte 1-->
-                <div class="formation-card">
-                    <img src="assets/lycee.jpg" alt="lycee" class="formation-logo">
-                    <h3>Baccalauréat Scientifique - Option Mathématiques</h3>
-                    <p><strong>Lieu :</strong> Lycée Léo-Lagrange, Bully-les-mines</p>
-                    <p><strong>Années :</strong> Septembre 2017 - Juillet 2021</p>
-                    <p><strong>Compétences :</strong></p>
-                    <ul>
-                        <li>Mathématiques</li>
-                        <li>Physique-Chimie</li>
-                        <li>Siences de la vie et de la terre</li>
-                    </ul>
+                <!--Formation 1-->
+                <div class="formation-item">
+                    <div class="formation-content">
+                        <img src="assets/lycee.jpg" alt="lycee" class="formation-logo">
+                        <h3>Baccalauréat Scientifique - Option Mathématiques</h3>
+                        <p><strong>Lieu :</strong> Lycée Léo-Lagrange, Bully-les-mines</p>
+                        <p><strong>Années :</strong> Septembre 2017 - Juillet 2021</p>
+                        <p><strong>Compétences :</strong></p>
+                        <ul>
+                            <li>Mathématiques</li>
+                            <li>Physique-Chimie</li>
+                            <li>Siences de la vie et de la terre</li>
+                        </ul>
+                    </div>
                 </div>
                 <!-- Carte 2 -->
-                <div class="formation-card">
+                <div class="formation-item">
+                    <div class="formation-content">
                     <img src="assets/univ.png" alt="Université Logo" class="formation-logo">
                     <h3>Licence en Sciences pour la Santé - Option Ingénierie Biomédicale</h3>
                     <p><strong>Lieu :</strong> Université de Lille, France
@@ -283,15 +286,17 @@
                         <li>Mobiliser des savoirs disciplinaires spécialisés en santé et/ou environnement et/ou médico- social et/ou agro-alimentaire</li>
                         <li>Maîtrise de la communication orale/écrite.</li>
                     </ul>
+                    </div>
                 </div>
-                <!-- Carte 3 -->
-                <div class="formation-card">
+                <!-- Formation 3 -->
+                <div class="formation-item">
+                    <div class="formation-content">
                     <img src="assets/univ.png" alt="Master Logo" class="formation-logo">
                     <h3>Master en Data Science en Santé</h3>
                     <p>Université de Lille - ILIS (2024 - )</p>
                     <p>Description succincte de ce que vous avez appris ou réalisé.</p>
+                    </div>
                 </div>
-                <!-- Ajouter d'autres cartes ici -->
             </div>
         </div>        
 
