--- a/index.html
+++ b/index.html
@@ -248,14 +248,14 @@
 
          <!--Formation Section-->
          <div class="tab-pane fade Formation-section" id="Formation" role="tabpanel" aria-labelledby="Formation-tab">
-            <div class="formation-title">
+            <div class="Formation-title">
                 <h1>Formation</h1>
             </div>
-            <div class="formation-timeline">
+            <div class="Formation-timeline">
                 <!--Formation 1-->
-                <div class="formation-item">
-                    <div class="formation-content">
-                        <img src="assets/lycee.jpg" alt="lycee" class="formation-logo">
+                <div class="Formation-item">
+                    <div class="Formation-content">
+                        <img src="assets/lycee.jpg" alt="lycee" class="Formation-logo">
                         <h3>Baccalauréat Scientifique - Option Mathématiques</h3>
                         <p><strong>Lieu :</strong> Lycée Léo-Lagrange, Bully-les-mines</p>
                         <p><strong>Années :</strong> Septembre 2017 - Juillet 2021</p>
@@ -268,9 +268,9 @@
                     </div>
                 </div>
                 <!-- Carte 2 -->
-                <div class="formation-item">
-                    <div class="formation-content">
-                    <img src="assets/univ.png" alt="Université Logo" class="formation-logo">
+                <div class="Formation-item">
+                    <div class="Formation-content">
+                    <img src="assets/univ.png" alt="Université Logo" class="Formation-logo">
                     <h3>Licence en Sciences pour la Santé - Option Ingénierie Biomédicale</h3>
                     <p><strong>Lieu :</strong> Université de Lille, France
                     <p><strong>Années :</strong> Septembre 2021 - Juin 2024</p>
@@ -289,9 +289,9 @@
                     </div>
                 </div>
                 <!-- Formation 3 -->
-                <div class="formation-item">
-                    <div class="formation-content">
-                    <img src="assets/univ.png" alt="Master Logo" class="formation-logo">
+                <div class="Formation-item">
+                    <div class="Formation-content">
+                    <img src="assets/univ.png" alt="Master Logo" class="Formation-logo">
                     <h3>Master en Data Science en Santé</h3>
                     <p>Université de Lille - ILIS (2024 - )</p>
                     <p>Description succincte de ce que vous avez appris ou réalisé.</p>
