--- a/index.html
+++ b/index.html
@@ -247,13 +247,11 @@
         </div>
 
          <!--Formation Section-->
-         <div class="tab-pane fade Formation-section" id="Formation" role="tabpanel" aria-labelledby="Formation-tab">
-            <div class="Formation-title">
-                <h1>Formation</h1>
-            </div>
-            <div class="Formation-timeline">
+         <div class="tab-pane fade" id="Formation" role="tabpanel" aria-labelledby="Formation-tab">
+            <div class="Fromartion-section">
+                <h1 class="Formation-title">Formation</h1>
                 <!--Formation 1-->
-                <div class="Formation-item">
+                <div class="Formation-block">
                     <div class="Formation-content">
                         <img src="assets/lycee.jpg" alt="lycee" class="Formation-logo">
                         <h3>Baccalauréat Scientifique - Option Mathématiques</h3>
@@ -268,7 +266,7 @@
                     </div>
                 </div>
                 <!-- Carte 2 -->
-                <div class="Formation-item">
+                <div class="Formation-block">
                     <div class="Formation-content">
                     <img src="assets/univ.png" alt="Université Logo" class="Formation-logo">
                     <h3>Licence en Sciences pour la Santé - Option Ingénierie Biomédicale</h3>
@@ -289,7 +287,7 @@
                     </div>
                 </div>
                 <!-- Formation 3 -->
-                <div class="Formation-item">
+                <div class="Formation-block">
                     <div class="Formation-content">
                     <img src="assets/univ.png" alt="Master Logo" class="Formation-logo">
                     <h3>Master en Data Science en Santé</h3>
