--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         </div>
 
          <!--Formation Section-->
-         <div class="tab-pane fade" id="Formation" role="tabpanel" aria-labelledby="Formation-tab">
+         <div class="tab-pane fade Formation-section" id="Formation" role="tabpanel" aria-labelledby="Formation-tab">
             <div class="Fromartion-section">
                 <h1 class="Formation-title">Formation</h1>
                 <!--Formation 1-->
