--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
          <!--Formation Section-->
          <div class="tab-pane fade" id="Formation" role="tabpanel" aria-labelledby="Formation-tab">
-            <div class="Fromartion-section">
+            <div class="Formation-section">
                 <h1 class="Formation-title">Formation</h1>
                 <!--Formation 1-->
                 <div class="Formation-block">
