--- a/index.html
+++ b/index.html
@@ -120,9 +120,8 @@
         </div>
             
         <!-- Experiences Section -->
-        <div class="tab-pane fade" id="Experiences" role="tabpanel" aria-labelledby="Experiences-tab">
-            <div class="experience-section">
-                <h1 class="experience-title">Expériences</h1>
+        <div class="tab-pane fade experiences timeline-section" id="Experiences" role="tabpanel" aria-labelledby="Experiences-tab">
+            <h1 class="timeline-section-title">Expériences</h1>
                 <div class="timeline">
                     <!-- Expérience 1 -->
                     <div class="timeline-item">
@@ -247,9 +246,8 @@
         </div>
 
          <!--Formation Section-->
-         <div class="tab-pane fade" id="Formation" role="tabpanel" aria-labelledby="Formation-tab">
-            <div class="Formation-section">
-                <h1 class="Formation-title">Formation</h1>
+         <div class="tab-pane fade Formation timeline-section " id="Formation" role="tabpanel" aria-labelledby="Formation-tab">
+            <h1 class="timeline-section-title">Formation</h1>
                 <div class="timeline">
                     <!--Formation 1-->
                     <div class="timeline-item">
