--- a/skills.html
+++ b/skills.html
@@ -17,13 +17,13 @@
             <nav>
                 <ul class="nav nav-tabs justify-content-end" id="portfolioTabs" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" id="Home-tab" data-bs-toggle="tab" href="#Home" role="tab" aria-controls="Home" aria-selected="true">Home</a>
+                        <a class="nav-link" id="Home-tab" data-bs-toggle="tab" href="#Home" role="tab" aria-controls="Home" aria-selected="true">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="about-tab" data-bs-toggle="tab" href="#about" role="tab" aria-controls="about" aria-selected="false">A propos de moi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="Skills-tab" data-bs-toggle="tab" href="#Skills" role="tab" aria-controls="Skills" aria-selected="false">Compétences</a>
+                        <a class="nav-link active" id="Skills-tab" data-bs-toggle="tab" href="#Skills" role="tab" aria-controls="Skills" aria-selected="false">Compétences</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="Experiences-tab" data-bs-toggle="tab" href="#Experiences" role="tab" aria-controls="Experiences" aria-selected="false">Experiences</a>
